Fixing the code !

--- a/MyApp_AR/static/reactIntegrationDemo/src/styles/_variables.scss
+++ b/MyApp_AR/static/reactIntegrationDemo/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$root-font-size: 1rem;
-$font-family: 'Roboto', sans-serif;
-$page-width: 800px;
-$paragraph-font-size: 1.6rem;
+$root-font-size: 1rem; /* Taille de police de base */
+$font-family: 'Roboto', sans-serif; /* Famille de police */
+$page-width: 800px; /* Largeur de la page */
+$paragraph-font-size: 1.6rem; /* Taille de police pour les paragraphes */
